Remove unrelated changes and leave only those relevant to getRawInputStream